﻿added missing text for log menu & score menu